tests/snapshots/tui__add_workflow_complete@completely_flat_toplevel_3_result_diff.snap
---
source: tests/tui.rs
description: "add → type 'github:user/repo' → Enter → Ctrl+u → type 'my-input' → Enter"
expression: session.app().pending_diff()
---
--- original
+++ modified
@@ -10,6 +10,7 @@
   inputs.crane.inputs.nixpkgs.follows = "nixpkgs";
   inputs.crane.inputs.rust-overlay.follows = "rust-overlay";
   inputs.crane.inputs.flake-utils.follows = "flake-utils";
+  inputs.my-input.url = "github:user/repo";

   outputs = _: { };
 }
