tests/snapshots/tui__add_workflow_complete@root_3_result_diff.snap
---
source: tests/tui.rs
description: "add → type 'github:user/repo' → Enter → Ctrl+u → type 'my-input' → Enter"
expression: session.app().pending_diff()
---
--- original
+++ modified
@@ -17,6 +17,7 @@
       inputs.rust-overlay.follows = "rust-overlay";
       inputs.flake-utils.follows = "flake-utils";
     };
+    my-input.url = "github:user/repo";
   };

   outputs = _: { };
