tests/snapshots/tui__add_workflow_with_diff_shows_confirm@root.snap
---
source: tests/tui.rs
description: "--diff add → type 'github:user/new-input' → Enter → Ctrl+u → type 'new-input' → Enter"
expression: "snapshot(&mut terminal, session.app())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "────────────────────────────────────────────────────────────────────────────────",
        "--- original                                                                    ",
        "+++ modified                                                                    ",
        "@@ -17,6 +17,7 @@                                                               ",
        "       inputs.rust-overlay.follows = "rust-overlay";                            ",
        "       inputs.flake-utils.follows = "flake-utils";                              ",
        "     };                                                                         ",
        "+    new-input.url = "github:user/new-input";                                   ",
        "────────────────────────────────────────────────────────────────────────────────",
        " Add  Apply?  y es  n o  b ack                                       flake-edit ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 5, y: 9, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 13, y: 9, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 16, y: 9, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 19, y: 9, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 22, y: 9, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 24, y: 9, fg: Cyan, bg: Rgb(40, 40, 40), underline: Reset, modifier: BOLD,
        x: 27, y: 9, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 68, y: 9, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
    ]
}
