tests/snapshots/tui__change_completion_accept@root_nixpkgs.snap
---
source: tests/tui.rs
description: "change nixpkgs → Ctrl+u → type 'gitlab' → Tab"
expression: "snapshot(&mut terminal, session.app())"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 4 },
    content: [
        "────────────────────────────────────────────────────────────────────────────────",
        "❯ gitlab:                                                                       ",
        "────────────────────────────────────────────────────────────────────────────────",
        " Change   URI  for nixpkgs                               Diff: Off   flake-edit ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 8, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 9, y: 3, fg: DarkGray, bg: White, underline: Reset, modifier: BOLD,
        x: 14, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 56, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 67, y: 3, fg: Gray, bg: Rgb(40, 40, 40), underline: Reset, modifier: NONE,
        x: 68, y: 3, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD,
    ]
}
